--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,10 +7,20 @@ project(Tutorial VERSION 1.0)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
+option(USE_MYMATH "Use tutorial provided math implementation" ON)
+
 configure_file(TutorialConfig.h.in TutorialConfig.h)
 
 # add the executable
 add_executable(Tutorial tutorial.cpp)
+
+if(USE_MYMATH)
+    # add the MathFunctions library
+    add_subdirectory(MathFunctions)
+    list(APPEND LIBS MathFunctions)
+endif()
+
+target_link_libraries(Tutorial PUBLIC ${LIBS})
 
 target_include_directories(Tutorial PUBLIC
                            "${PROJECT_BINARY_DIR}"
